src/components/section/OnBoardingSection.module.scss
.container {
  display: flex;
  width: 100%;
  height: 100dvh;

  gap: 100px;

  background: #121217;
  flex-direction: column;
  align-items: center;
  position: relative;

}

.contentContainer {
  display: flex;
  flex-direction: column;
  gap: 24px;
  align-items: center;
  position: absolute;
  z-index: 5;
  left: 50%;
  top: 30%;
  transform: translate(-50%, 0);
  @media (max-width: 500px) {
    gap: 15px;
  }
}

.sunrinLogo {
  position: relative;
  width: 182px;
  aspect-ratio: 182/24;

  @media (max-width: 650px) {
    width: 170px;
  }
  @media (max-width: 500px) {
    width: 155px;
  }

  @media (max-width: 350px) {
    width: 140px;
  }
}

.ssfLogo {
  position: relative;
  width: 515px;
  aspect-ratio: 515/203;


  @media (max-width: 650px) {
    width: 417px;
  }
  @media (max-width: 500px) {
    width: 317px;
  }

  @media (max-width: 350px) {
    width: 250px;
  }
}

.typography {
  font-size: 24px;
  font-weight: 700;
  color: #fff;
  line-height: 150%;

  @media (max-width: 650px) {
    font-size: 20px;
  }

  @media (max-width: 500px) {
    font-size: 16px;
  }

  @media (max-width: 350px) {
    font-size: 14px;
  }
}

.overlay {
  position: absolute;
  z-index: 1;
  width: 100%;
  height: 100%;
  background: linear-gradient(180deg, rgba(18, 18, 23, 0.50) 37%, var(--background) 85%); /* 그라디언트 필터 */
}

.buttonContainer {
  position: absolute;
  z-index: 10;
  display: flex;
  flex-direction: row;
  gap: 20px;
  bottom: 64px;
  width: 100%;
  justify-content: center;

  @media (max-width: 400px) {
    flex-direction: column;
    align-items: center;
  }
}

@mixin button {
  width: 146px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  cursor: pointer;

  &:active {
  }

  @media (max-width: 400px) {
    width: 100%;
    max-width: 240px;
  }
}

.applyButton {
  @include button;
  background: var(--primary);
  color: #121217;
  font-weight: 900;
}

.snsButton {
  @include button;
  background: transparent;
  color: #C6C6D2;
  box-shadow: 0 0 0 2px #383848 inset;
  font-weight: 600;
}

